fix:add overflow to element title

--- a/blocks/elements/__title/elements__title.css
+++ b/blocks/elements/__title/elements__title.css
@@ -7,4 +7,7 @@
     padding-top:25px;
     padding-left: 21px;
     padding-bottom: 31px;
+    max-width: 210px;
+    height: 30px;
+    overflow: hidden;
 }
